@@ -8,6 +8,7 @@ ap-southeast-1
 ap-southeast-2
 ca-central-1
 eu-central-1
+eu-north-1
 eu-south-1
 eu-west-1
 eu-west-2
