@@ -1,6 +1,7 @@
 Revision history for Perl extension aws-lambda
 
 {{$NEXT}}
+    - Europe (Stockholm) eu-north-1 is available
 
 0.0.30 2021-10-06T00:13:52Z
     - add amd64 compatible layers
